initial mozi template

--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Mozi: Twitter-based Payment System</title>
+    <title>Mozi: P2P Payment System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -45,9 +45,7 @@
             "23"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#about">Explore</a></li>
               <li><a href="howitworks.html">How It Works</a></li>
-              <li><a href="hashtags.html">Hashtag Index</a></li>
               <li><a href="FAQ.html">FAQ</a></li>
               <li><a href="business.html">For Business</a></li>
   
@@ -63,18 +61,25 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="span 12">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
+        <div class="span3">
+           <img src="img/mozihandx.jpg" alt="Pulpit rock" style="position:relative; top: 0px; right: 0px">
+        </div>
+        <div class="span8" style="float:left;">
         <h1>Welcome to <img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
         <h3 style="position:relative; top: -15px; right: 0px">Pay and order for stuff using Twitter, for free</h3>
         <div class="row">
           <div class="span3">
-          <input class="span3" type="text" placeholder="Enter Twitter Name"></div>
+          <input class="span3" type="text" placeholder="Enter Twitter Name">
+          </div>
           <div class="span 2">
-          <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -40px">Join Now &raquo;</a></div>
+          <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -40px">Join Now &raquo;</a>
+          </div>
         </div>
+    
       </div>
 
       <!-- Example row of columns -->
