initial mozi template

--- a/template/css/bootstrap.css
+++ b/template/css/bootstrap.css
@@ -6013,7 +6013,7 @@ a.badge:hover {
   font-weight: 200;
   line-height: 30px;
   color: inherit;
-  background-image: url(../img/coverphoto_mozi_good.jpg);
+  background-color: #FFFFFF;
   background-repeat: no-repeat;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
