--- a/template/index.html
+++ b/template/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
-            "23"></a></a>
+            "23"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="howitworks.html">How It Works</a></li>
@@ -64,57 +64,28 @@
     <div class="span 12">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <div class="span3">
-           <img src="img/mozihandx.jpg" alt="Pulpit rock" style="position:relative; top: 0px; right: 0px">
+      <div class="row_header">
+        <div class="span4">
+           <img src="img/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
         </div>
-        <div class="span8" style="float:left;">
-        <h1>Welcome to <img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
-        <h3 style="position:relative; top: -15px; right: 0px">Pay and order for stuff using Twitter, for free</h3>
+        <div class="span8" style= "float:right;">
+        <h1>Welcome to <img src="img/mozi_logo.png" alt="Mozi Logo" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
+        <h3 style="position:relative; top: -15px; right: 0px">Gotta pay your</h3>
         <div class="row">
           <div class="span3">
-          <input class="span3" type="text" placeholder="Enter Twitter Name">
+          <input class="span3" type="text" placeholder="Enter your E-mail">
           </div>
           <div class="span 2">
-          <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -40px">Join Now &raquo;</a>
+            <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -10px">Join Now <small>(It's free!)</small></a>
           </div>
+        </div>
         </div>
     
       </div>
+    </div>
 
       <!-- Example row of columns -->
-      <div class="row-fluid">
-
-        <div class="span6">
-          <h2>Buy and #share with friends</h2>
-          <p>Mozi allows you to effortlessly connect and #share purchases from your favorite brands with your friends. Mozi users #pay at local and online stores with their Twitter name. Once you join, you'll never have to use a credit card again. Mozi is super safe, tons of fun, and the easiest way to pay and share stories.</p>
-          <p><a class="btn" href="#">Learn More &raquo;</a></p>
-
-        </div>
-
-          <!--
-          <h2>What is Mozi?</h2>
-          <p>Mozi is a Twitter-based payment platform that allows businesses to charge customers for purchases with a single tweet. Mozi is super safe, tons of fun, and the easiest way for you to pay, or get paid.  We also made it easy to start using Mozi. Just tweet <strong> "@myMozi #register" </strong> </p>
-          <p><a class="btn" href="#">Learn More &raquo;</a></p>
-        </div>
-       <div class="span6">
-          <h2>Credit Card? No way, José.</h2>
-          <p>Mozi allows you to link your credit card to your Twitter account using our ultra secure third-party technology. We allow you to pay for purchases simply by giving your Twitter name. So, go ahead and leave your credit card at home--you're using Mozi now. .</p>
-          <p><a class="btn" href="#">How It Works &raquo;</a></p>
-        </div>
-   -->
-      <div class="span6">
-          <h2>Let your friends #recommend</h2>
-          <p>Unsure of what to buy? Getting product suggestions is as simple as tweeting #recommend. Using your Twitter network, Mozi can recommend items for you at any Mozi store based off what's trending within your group of friends. Join your friends now by signing up for Mozi to discover new, cool brands and trending items you can explore and buy.</p>
-          <p><a class="btn" href="#">How It Works &raquo;</a></p>
-      </div>
-    </div>
-      <hr>
-        <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
-
+   
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
