--- a/template/biz_signup.html
+++ b/template/biz_signup.html
@@ -70,12 +70,12 @@
       </div>
     </div>
 
-    <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="navbar-wrapper">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > powered business</h1>
+      <div class="bs-docs-social">
+        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > new user registration</h1>
       </div>
+    <div class="container">
 
       <!-- Example row of columns -->
       <div class="row-fluid">
@@ -83,13 +83,14 @@
           <form>
           <fieldset>
            <legend>It's free to join!</legend>
-           <label>Business Name</label>
+           <label>First Name</label>
              <input type="text" placeholder="">
-             <label>Business Twitter Name</label>
-             <input class="text" placeholder="@yourbusinessname">
-
-             <label>Your E-mail Address</label>
-             <input type="text" placeholder="sample@sample.com">
+             <label>Last Name</label>
+             <input type="text" placeholder="">
+             <label>Valid E-mail Address</label>
+             <input type="text" placeholder="">
+             <label>Desired Mozi User Name</label>
+             <input type="text" placeholder="">
              <label>New Password</label>
              <input type="password" placeholder="">
              <label>Re-type Password</label>
@@ -105,40 +106,14 @@
       
    		<div class="span6 offset1">
    			<div class="row" style="position:relative; top: -10px; right: 0px">
-        <h3 align="center">Start accepting Twitter payments immediately</h3></div>
+        <h3 align="center">Send money to friends and family <u>instantly</u></h3></div>
 
-          <div class="span9 offset1">
-             <div id="myCarousel" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="img/bizowner.jpg" alt="">
-                    <div class="carousel-caption">
-                      <h4>The Lost Dog <small>@thelostdog powered by <strong>Mozi</strong></small></h4>
-                      
-                    </div>
-                  </div>
-                  <div class="item">
-                    <img src="img/bootstrap-mdo-sfmoma-02.jpg" alt="">
-                    <div class="carousel-caption">
-                      <h4>Second Thumbnail label</h4>
-                      <p>Join US.</p>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <img src="img/favicon.png" alt="">
-                    <div class="carousel-caption">
-                      <h4>Third Thumbnail label</h4>
-                      <p>Please Join US.</p>
-                    </div>
-                  </div>
-                </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-              </div>
+          <div class="span9 offset2">
+            <img src="img/peoplephones.jpg"" alt="Pulpit rock">
             </div>
 
       
-   			<div class="row">
+   <div class="row">
         <div class="well span6" align="center">
         <h2 align="center">2.9% + $0.30</h2>
          <h4>per transaction in Mozi Beta</h4>
@@ -151,6 +126,7 @@
     </div>
     </div>
 </div>
+    </div>
 
       <hr>
 
