Template Fixes, Adding Login/Signup

--- a/template/biz_signup.html
+++ b/template/biz_signup.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        padding-top: 60px;
+        padding-top: 45px;
         padding-bottom: 40px;
       }
     </style>
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar  navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -75,6 +75,11 @@
       <div class="bs-docs-social">
         <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > new user registration</h1>
       </div>
+      
+      <div id="space" style="padding-bottom:20px;">
+           &nbsp;
+        </div>
+      
     <div class="container">
 
       <!-- Example row of columns -->
