--- a/template/biz_signup.html
+++ b/template/biz_signup.html
@@ -41,22 +41,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="#"><img src="img/favicon.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#">Search Places</a></li>
-              <li><a href="#about">For Business</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Learn<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">How It Works</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+               <li><a href="howitworks.html">How It Works</a></li>
+              <li><a href="FAQ.html">FAQ & Fees</a></li>
+              <li><a href="business.html">About</a></li>
                 </ul>
               </li>
             </ul>
@@ -84,21 +75,21 @@
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span4">
+        <div class="span4" style="padding-left:45px;">
           <form>
           <fieldset>
-           <legend>It's free to join!</legend>
-           <label>First Name</label>
+           <legend><h2>It's free to join!</h2></legend>
+           <label><b>First Name</b></label>
              <input type="text" placeholder="">
-             <label>Last Name</label>
+             <label><b>Last Name</b></label>
              <input type="text" placeholder="">
-             <label>Valid E-mail Address</label>
+             <label><b>Valid E-mail Address</b></label>
              <input type="text" placeholder="">
-             <label>Desired Mozi User Name</label>
+             <label><b>Desired Mozi User Name</b></label>
              <input type="text" placeholder="">
-             <label>New Password</label>
+             <label><b>New Password</b></label>
              <input type="password" placeholder="">
-             <label>Re-type Password</label>
+             <label><b>Re-type Password</b></label>
              <input type="password" placeholder="">
              <label></label>
              <small>By clicking 'Sign Up' you agree to our <a href="#termsAgreement">Terms</a> and that you understand the Mozi <a href="#privacyPolicy">Privacy and Personal Information Use Policy</a>
@@ -113,31 +104,34 @@
    			<div class="row" style="position:relative; top: -10px; right: 0px">
         <h3 align="center">Send money to friends and family <u>instantly</u></h3></div>
 
-          <div class="span9 offset2">
-            <img src="img/peoplephones.jpg"" alt="Pulpit rock">
+          <div class="span9 offset2" style="padding-bottom:25px;">
+            <img src="img/peoplephones2.jpg" alt="Pulpit rock"/>
             </div>
-
-      
-   <div class="row">
-        <div class="well span6" align="center">
+                    
+                    <div class="row">
+        <div class="span6" align="center">
         <h2 align="center">2.9% + $0.30</h2>
          <h4>per transaction in Mozi Beta</h4>
         </div>
-   			<div class="well span6"  align="center">
+   	<div class="span6"  align="center">
    			  <h5>No Monthly Fees</h5>
           <h5>No Setup Fees</h5>
           <h5>No Recurring Fees</h5>
-   		</div>
+   	</div>
     </div>
-    </div>
+
+                </div>
+          
+      </div>
+    
+   
 </div>
-    </div>
+
 
       <hr>
-
-      <footer>
+      <div class="span12" style="padding-left:25px">
         <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
-      </footer>
+     </div>
 
 
 
