--- a/template/signup.html
+++ b/template/signup.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        padding-top: 60px;
+        padding-top: 45px;
         padding-bottom: 40px;
       }
     </style>
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar  navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -41,15 +41,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
-            "23"></a></a>
+          <a class="brand" href="#"><img src="img/favicon.png" alt="mozi" width="23" height=
+            "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#about">Explore</a></li>
-              <li><a href="howitworks.html">How It Works</a></li>
-              <li><a href="hashtags.html">Hashtag Index</a></li>
-              <li><a href="business.html">For Business</a></li>
-  
+               <li><a href="howitworks.html">How It Works</a></li>
+              <li><a href="FAQ.html">FAQ & Fees</a></li>
+              <li><a href="business.html">About</a></li>
+                </ul>
               </li>
             </ul>
             <form class="navbar-form pull-right">
@@ -62,55 +61,79 @@
       </div>
     </div>
 
-    <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="navbar-wrapper">
-        <h1>Join <img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" ></h1>
+      <div class="bs-docs-social">
+        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > new user registration</h1>
       </div>
+      
+      <div id="space" style="padding-bottom:20px;">
+           &nbsp;
+        </div>
+      
+    <div class="container">
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span5">
+        <div class="span4" style="padding-left:45px;">
           <form>
           <fieldset>
-           <legend>Let's get started!</legend>
-             <label>Twitter Name</label>
-             <span class="input-xlarge uneditable-input">irunthisblock2</span>
-             <label>Your E-mail Address</label>
-             <input type="text" placeholder="sample@sample.com">
-             <label>New Password</label>
+           <legend><h2>It's free to join!</h2></legend>
+           <label><b>First Name</b></label>
+             <input type="text" placeholder="">
+             <label><b>Last Name</b></label>
+             <input type="text" placeholder="">
+             <label><b>Valid E-mail Address</b></label>
+             <input type="text" placeholder="">
+             <label><b>Desired Mozi User Name</b></label>
+             <input type="text" placeholder="">
+             <label><b>New Password</b></label>
              <input type="password" placeholder="">
-             <label>Re-type Password</label>
+             <label><b>Re-type Password</b></label>
              <input type="password" placeholder="">
              <label></label>
              <small>By clicking 'Sign Up' you agree to our <a href="#termsAgreement">Terms</a> and that you understand the Mozi <a href="#privacyPolicy">Privacy and Personal Information Use Policy</a>
             </small>
              <label></label>
-             <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -40px">Join Now &raquo;</a></div>
+             <p><a href="C:/bootstrap-master/mySite/regcheckemail.html" class="btn btn-large btn-primary" type="button">Sign Up</a></p>
            </fieldset>
           </form>
         </div>
       
    		<div class="span6 offset1">
-   			<div class="row">
-   			<h2>Are you a business?</h2></div>
-   			<div class="row">
-   				<p class="lead">Start accepting Twitter payments immediately</p>
-   			</div>
-   			<div class="row">
-   			<p><button class="btn btn-large btn-primary" type="button">Learn More</button></p></div>
-   		</div>
+   			<div class="row" style="position:relative; top: -10px; right: 0px">
+        <h3 align="center">Send money to friends and family <u>instantly</u></h3></div>
+
+          <div class="span9 offset2" style="padding-bottom:25px;">
+            <img src="img/peoplephones2.jpg" alt="Pulpit rock"/>
+            </div>
+                    
+                    <div class="row">
+        <div class="span6" align="center">
+        <h2 align="center">2.9% + $0.30</h2>
+         <h4>per transaction in Mozi Beta</h4>
+        </div>
+   	<div class="span6"  align="center">
+   			  <h5>No Monthly Fees</h5>
+          <h5>No Setup Fees</h5>
+          <h5>No Recurring Fees</h5>
+   	</div>
     </div>
 
+                </div>
+          
+      </div>
+    
    
+</div>
+
+
       <hr>
-
-      <footer>
+      <div class="span12" style="padding-left:25px">
         <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
-      </footer>
+     </div>
 
-    </div> <!-- /container -->
+
 
     <!-- Le javascript
     ================================================== -->
