--- a/template/css/bootstrap.css
+++ b/template/css/bootstrap.css
@@ -694,7 +694,13 @@ a.muted:hover {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #ddd;
 }
-
+.squarebox{
+  padding: 0px 0;
+  text-align: center;
+  background-color: #f5f5f5;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #ddd;
+}
 .text-warning {
   color: #c09853;
 }
@@ -3451,8 +3457,9 @@ input[type="button"].btn-block {
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);  
 }
+
 
 .btn-success:hover,
 .btn-success:active,
