--- a/template/index.html
+++ b/template/index.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="img/favicon.png" alt="mozi" width="23" height=
             "23"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
