--- a/template/index1.html
+++ b/template/index1.html
@@ -52,15 +52,15 @@
             </ul>
              
             
-           <div class="navbar-form pull-right">
-                 <li style="padding-top: 15px;" class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-size: 17px;">Log in <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#one">one</a></li>
-                        <li><a href="#two">two</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#three">three</a></li>
-                      </ul>
+       <div style="float:right; padding-top: 3px" class="btn-group">
+  <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+    <i class="icon-lock"></i> Log in
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu">
+    <!-- log in -->
+  </ul>
+</div>
             </li>
             
            </div>
@@ -83,8 +83,8 @@
           <h2 style="position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
         
           <div class="row">
-          <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large">Learn about Mozi</a>
-          <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-success btn-large">Sign Up <small>(It's free!)</small></a>
+          <a href="howitworks.html" class="btn btn-primary btn-large">Learn about Mozi</a>
+          <a href="signup.html" class="btn btn-success btn-large">Sign Up <small>(It's free!)</small></a>
           </div>
       </div>
   </div>
