--- a/template/login.html
+++ b/template/login.html
@@ -89,6 +89,10 @@
             <tr>
                 <td align="center" ><a href="signup.html" class="btn btn-primary" style="margin-top: 10px"><i class="icon-lock icon-white"></i> Log in</a></td>
             </tr>
+            <tr><td><p></p></td></tr><tr><td><p></p></td></tr><tr><td><p></p></td></tr>
+            <tr>
+                <td align="center"><a href="signup.html" style="margin-top: 100px"><small>Reset Password</small></a></td>
+            </tr>
         </table>
      
         </div>
