Removing Tables (Yuck) from Login page.

--- a/template/login.html
+++ b/template/login.html
@@ -49,8 +49,6 @@
               <li><a href="FAQ.html">FAQ & Fees</a></li>
               <li><a href="business.html">About</a></li>
                 </ul>
-              </li>
-            </ul>
             <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
               <input class="span2" type="password" placeholder="Password">
@@ -72,30 +70,17 @@
         </div>
       
     <div class="container">
-        <table align="center">
-            <tr>
-               
-                <td><input type="text" placeholder="E-mail or User Name"></td>
-            </tr>
-            <tr>
-           
-            <td><input type="password" placeholder="Password"><td>
-            </tr>
-            <tr>
-                <td align="center"><input type="checkbox"> Remember me</td>
-                <td>
-            </tr>
- 
-            <tr>
-                <td align="center" ><a href="signup.html" class="btn btn-primary" style="margin-top: 10px"><i class="icon-lock icon-white"></i> Log in</a></td>
-            </tr>
-            <tr><td><p></p></td></tr><tr><td><p></p></td></tr><tr><td><p></p></td></tr>
-            <tr>
-                <td align="center"><a href="signup.html" style="margin-top: 100px"><small>Reset Password</small></a></td>
-            </tr>
-        </table>
+        
+        <div style="text-align:center;">
+            <p class="row"><input type="text" placeholder="E-mail or User Name"></p>
+            <p class="row"><input type="password" placeholder="Password"></p>
+            <p class="row"><a href="signup.html" class="btn btn-primary" style="margin-top: 10px; margin-right:10px;"><i class="icon-lock icon-white"></i> Log in</a>
+            
+             <a href="signup.html"><small>Reset Password</small></a></p>
      
         </div>
+        
+    </div>
       
 
       <hr>
