Changing from img to images folder with refractor.

--- a/template/business.html
+++ b/template/business.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -67,7 +67,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
       <div class="span8">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > powered business</h1></div>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > powered business</h1></div>
       <div class="inline">
         <p align="right" style="position:relative; top: 25px; right: 0px"><button class="btn btn-large btn-primary" type="button">Join Now</button><strong> It's free to start!</strong></p>
       </div>
@@ -116,7 +116,7 @@
               <div id="myCarousel" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="img/bizowner.jpg" alt="">
+                    <img src="images/bizowner.JPG" alt="">
                     <div class="carousel-caption">
                       <h4>The Lost Dog <small>@thelostdog powered by <strong>Mozi</strong></small></h4>
                       
@@ -130,7 +130,7 @@
                     </div>
                   </div>
                   <div class="item">
-                    <img src="img/favicon.png" alt="">
+                    <img src="images/favicon.png" alt="">
                     <div class="carousel-caption">
                       <h4>Third Thumbnail label</h4>
                       <p>Please Join US.</p>
