--- a/template/howitworks.html
+++ b/template/howitworks.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -67,7 +67,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
       <div class="span8">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > how it works</h1></div>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > how it works</h1></div>
       <div class="inline">
         <p align="right" style="position:relative; top: 30px; right: 45px"><a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -40px">Join Now &raquo;</a></p>
       </div>
@@ -79,10 +79,10 @@
       <!-- Example row of columns -->
       <div class="row-fluid">
         <div class="wellmain span8">
-          <h2><img src="img/mozibird.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" ><a href="https://twitter.com/signup">Get</a> a Twitter account</h2>
-          <h2><img src="img/mozi_net.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" ><a href="signup.html">Join</a> Mozi with Twitter</h2>
-          <h2><img src="img/mozi_creditcardtwitter.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" > Link your credit card</h2>
-          <h2><img src="img/mozi_buynet.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" > <a href="hashtags.html">Tweet</a> to buy, share & recommend</h2>
+          <h2><img src="images/mozibird.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" ><a href="https://twitter.com/signup">Get</a> a Twitter account</h2>
+          <h2><img src="images/mozi_net.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" ><a href="signup.html">Join</a> Mozi with Twitter</h2>
+          <h2><img src="images/mozi_creditcardtwitter.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" > Link your credit card</h2>
+          <h2><img src="images/mozi_buynet.png" alt="Pulpit rock" width="150" height="150" style="position:relative; top: -20px" > <a href="hashtags.html">Tweet</a> to buy, share & recommend</h2>
 
         
         </div>
