--- a/template/index1.html
+++ b/template/index1.html
@@ -44,7 +44,7 @@
           </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li> <a href="#"><img src="img/favicon_logo.png" alt="mozi" width="60" height=
+                <li> <a href="#"><img src="images/favicon_logo.png" alt="mozi" width="60" height=
             "30" ALIGN="MIDDLE"></a></li>
                <li><a style="padding-top: 15px" href="howitworks.html">How It Works</a></li>
               <li><a style="padding-top: 15px" href="FAQ.html">FAQ & Fees</a></li>
@@ -74,7 +74,7 @@
   <div class="container">
      
       <div class="span 4" style="padding-top: 30px"> 
-           <img src="img/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
+           <img src="images/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
       </div>  
       
       <div class="span 8" style="padding-top: 75px">
