--- a/template/login.html
+++ b/template/login.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><img src="img/favicon.png" alt="mozi" width="23" height=
+          <a class="brand" href="#"><img src="images/favicon.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -62,7 +62,7 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="bs-docs-social">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > log in</h1>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > log in</h1>
       </div>
       
       <div id="space" style="padding-bottom:20px;">
