--- a/template/FAQ.html
+++ b/template/FAQ.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -67,7 +67,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
       <div class="span8">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > faq</h1></div>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > faq</h1></div>
       <div class="inline">
         <p align="right" style="position:relative; top: 25px; right: 0px"><button class="btn btn-large btn-primary" type="button">Join Now</button><strong> It's free!</strong></p>
       </div>
