--- a/template/biz_interface.html
+++ b/template/biz_interface.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -106,7 +106,7 @@
                  <dt>Buyer Name</dt>
                    <dd>Chris Paquette</dd>
              <dt>Twitter Name</dt>
-             <dd><img src="img/twitterbird_blue.jpg" height=
+             <dd><img src="images/twitterbird_blue.jpg" height=
             "20" width="20"> <strong>irunthisblock2</strong></dd>
             <dd><small><a href="#">tweet for more info</a></small></dd>
              <dt>Order Number</dt>
@@ -229,7 +229,7 @@
           <div class="row-fluid">
             <dl class="dl-horizontal">
                <dt>Twitter Name</dt>
-             <dd><img src="img/twitterbird_blue.jpg" height=
+             <dd><img src="images/twitterbird_blue.jpg" height=
             "20" width="20"> <strong>irunthisblock2</strong></dd>
                  <dt>Real Name</dt>
                    <dd>Chris Paquette</dd>
