--- a/template/biz_interface_help.html
+++ b/template/biz_interface_help.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -93,7 +93,7 @@
             <div class="row-fluid">
             <h3>Brewed Awakenings</h3></div>
             <div class="row-fluid">
-            <h4 style="position:relative; top: -15px; right: 0px"><img src="img/twitterbird_blue.jpg" height=
+            <h4 style="position:relative; top: -15px; right: 0px"><img src="images/twitterbird_blue.jpg" height=
             "30" width="30"> brewedawakenings</h4></div>
            
               
