--- a/template/index.html
+++ b/template/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon.png" alt="mozi" width="23" height=
             "23"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -70,10 +70,10 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="row_header">
         <div class="span4">
-           <img src="img/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
+           <img src="images/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
         </div>
         <div class="span8" style= "float:right;">
-        <h1>Welcome to <img src="img/mozi_logo.png" alt="Mozi Logo" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
+        <h1>Welcome to <img src="images/mozi_logo.png" alt="Mozi Logo" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
         <h3 style="position:relative; top: -15px; right: 0px">Gotta pay your</h3>
         <div class="row">
           <div class="span3">
