--- a/template/interface_places.html
+++ b/template/interface_places.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -86,7 +86,7 @@
             <div class="row-fluid">
             <h3>Chris Paquette</h3></div>
             <div class="row-fluid">
-            <h4 style="position:relative; top: -15px; right: 0px"><img src="img/twitterbird_blue.jpg" height=
+            <h4 style="position:relative; top: -15px; right: 0px"><img src="images/twitterbird_blue.jpg" height=
             "30" width="30"> irunthisblock2</h4></div>
             <div class="row-fluid">
               <div class="alert alert-error"><i class="icon-warning-sign"></i>    <strong>No credit card linked to this account!</strong> Fix by clicking <a href="#">here</a></div>.
