--- a/template/regcheckemail.html
+++ b/template/regcheckemail.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><img src="img/favicon_white.png" alt="mozi" width="23" height=
+          <a class="brand" href="#"><img src="images/favicon_white.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
