--- a/template/signup.html
+++ b/template/signup.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><img src="img/favicon.png" alt="mozi" width="23" height=
+          <a class="brand" href="#"><img src="images/favicon.png" alt="mozi" width="23" height=
             "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -62,7 +62,7 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="bs-docs-social">
-        <h1><img src="img/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > new user registration</h1>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -21px" > new user registration</h1>
       </div>
       
       <div id="space" style="padding-bottom:20px;">
@@ -103,7 +103,7 @@
         <h3 align="center">Send money to friends and family <u>instantly</u></h3></div>
 
           <div class="span9 offset2" style="padding-bottom:25px;">
-            <img src="img/peoplephones2.jpg" alt="Pulpit rock"/>
+            <img src="images/peoplephones2.jpg" alt="Pulpit rock"/>
             </div>
                     
                     <div class="row">
